adicionando queries requisitadas

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,10 @@
             <input type="text" id="playlistName" name="playlistName" required>
         </form>
 
+        <a href="{{ url_for('routing.get_queries') }}">
+            <button type="button">Acessar Consultas</button>
+        </a>
+
 
     </div>
 </body>
