--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -51,3 +51,14 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
